@@ -14,12 +14,16 @@
 
 2007-09-08  Ulrich Mueller  <ulm@gentoo.org>
 
-	* elisp.eclass (SIMPLE_ELISP, DOCS, NEED_EMACS): Add man comments.
+	* elisp.eclass (elisp_src_install): Die if elisp-install or
+	elisp-site-file-install fails.
+	(SIMPLE_ELISP, DOCS, NEED_EMACS): Add man comments.
 
 	* elisp-common.eclass (elisp-site-file-install): Remove redundant
-	cp and pushd/popd commands.
+	cp and pushd/popd commands. Don't die, return status instead.
 	(elisp-compile, elisp-comp, elisp-install): Quote all instances of
 	$@ and $*. Don't use ${status}; it is reserved in zsh.
+	(elisp-install, elisp-site-file-install): Call insinto and doins
+	in a subshell to avoid pollution of calling environment.
 	(EMACS_BATCH_CLEAN): New variable, analog to the XEmacs eclasses.
 
 2007-08-21  Christian Faulhammer  <opfer@gentoo.org>
